# documentextractor

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  main.py  processor.py  tasks.py  ui.py
src/extraction/: __init__.py  llm_extractor.py  ocr_engine.py
src/ingestion/: __init__.py  docx_parser.py  image_parser.py  loader.py  pdf_parser.py
src/output/: __init__.py  database.py  schemas.py
src/preprocessing/: __init__.py  enhancer.py
src/templates/: __init__.py  base_template.py  certificate.py  id_document.py  indian_ids.py  transcript.py
